...
  "accounts_screen_walletType_Envoy": "Envoy",
  "accounts_screen_walletType_Passport": "Passport",
  "accounts_screen_walletType_defaultName": "Mobile Wallet",
  "accounts_switchDefault": "Default",
  "accounts_switchPassphrase": "Passphrase",
...
  "backups_downloadSettingsDataBackupFile": "Download Settings & Data Backup File",
  "backups_downloadSettingsMetadataBackupFile": "Download Settings & Metadata Backup File",
  "backups_erase_mobile_wallet": "Erase Mobile Wallet",
  "backups_erase_wallets_and_backups": "Erase Mobile Wallet and Backups",
  "backups_erase_wallets_and_backups_modal_1_2_android_subheading": "You’re about to permanently delete your Envoy Wallet. \n\nIf you are using Magic Backups, your Envoy Seed will also be deleted from Android Auto Backup. ",
  "backups_erase_wallets_and_backups_modal_1_2_ios_subheading": "You’re about to permanently delete your Envoy Wallet.\n\nIf you are using Magic Backups, your Envoy Seed will also be deleted from iCloud Keychain. ",
  "backups_erase_wallets_and_backups_modal_2_2_subheading": "Any connected Passport accounts will not be removed as part of this process.\n\nBefore deleting your Envoy Wallet, let’s ensure your Seed and Backup File are saved.\n",
  "backups_erase_wallets_and_backups_show_seed_CTA": "Show Seed",
  "backups_erase_wallets_and_backups_show_seed_heading": "Keep Your Seed Private",
  "backups_erase_wallets_and_backups_show_seed_subheading": "Remember to always keep your seed words private. Anyone with access to this seed can spend your Bitcoin!",
...
  "backups_toggle_envoy_mobile_wallet_key": "Mobile Wallet Key",
  "backups_viewMobileWalletSeed": "View Mobile Wallet Seed",
  "bottomNav_accounts": "Accounts",
  "bottomNav_activity": "Activity",
  "bottomNav_devices": "Devices",
  "bottomNav_learn": "Learn",
  "bottomNav_privacy": "Privacy",
  "bottomNav_transfer": "Transfer",
  "btcpay_connection_modal_expired_subheading": "This voucher expired on {period}.\n\n\nPlease contact the issuer with any voucher-related questions.",
...
  "component_24WordSeed": "24 Word Seed",
  "component_Apply": "Apply",
  "component_advanced": "Advanced",
  "component_apply": "Apply",
  "component_areYouSure": "Are you sure?",
  "component_back": "Back",
  "component_cancel": "Cancel",
  "component_confirm": "Confirm",
  "component_content": "Content",
  "component_continue": "Continue",
  "component_delete": "Delete",
  "component_device": "Device",
  "component_dismiss": "Dismiss",
  "component_done": "Done",
  "component_dontShowAgain": "Don’t show again",
  "component_exit": "Exit",
...
  "component_save": "Save",
  "component_searching": "Searching",
  "component_skip": "Skip",
  "component_sortBy": "Sort by",
  "component_tryAgain": "Try Again",
  "component_unpair": "Unpair",
  "component_update": "Update",
  "component_warning": "Warning",
  "component_yes": "Yes",
  "componet_disconnect": "Disconnect",
  "contactRampForSupport": "Contact Ramp for support",
  "copyToClipboard_address": "Your address will be copied to the clipboard and may be visible to other apps on your phone.",
...
  "delete_wallet_for_good_instant_android_subheading": "Android automatically backs up your Envoy data every 24 hours.\n\nTo immediately remove your Envoy Seed from Android Auto Backups, you can perform a manual backup in your device [[Settings.]]",
  "delete_wallet_for_good_loading_heading": "Deleting your Envoy Wallet",
  "delete_wallet_for_good_modal_cta2": "Delete Wallet",
  "delete_wallet_for_good_modal_subheading": "Are you sure you want to DELETE your Envoy Wallet?",
  "delete_wallet_for_good_success_heading": "Your wallet was successfully deleted",
  "descriptor_toast_descriptorCopied": "Descriptor copied to clipboard.",
  "descriptor_toast_signatureCopied": "Signature copied to clipboard.",
  "device_deviceDetailsPrimeRemoved_accessoryRemoved": "Accessory removed, please reconnect Prime.",
  "device_deviceDetailsPrimeRemoved_completeAccessorySetup": "Complete Accessory Set Up",
  "device_deviceDetailsPrimeRemoved_pairPassportAgain": "Pair Passport Again",
  "device_deviceDetailsPrimeRemoved_reconnectPassport": "Reconnect Passport",
  "device_deviceDetailsPrime_connected": "Connected",
...
  "envoy_faq_question_8": "Is Envoy Open Source?",
  "envoy_faq_question_9": "Do I have to use Envoy to transact with Passport?",
  "envoy_fw_fail_heading": "Envoy failed to copy the firmware onto the microSD card.",
  "envoy_fw_fail_subheading": "Ensure the microSD card is inserted into your phone correctly and try again. Alternatively the firmware can be downloaded from our [[GitHub]].",
  "envoy_fw_intro_cta": "Download Firmware",
  "envoy_fw_intro_heading": "Next, let’s update Passport's firmware",
  "envoy_fw_intro_subheading": "Envoy allows you to update your Passport from your phone using the included microSD adapter.\n\nAdvanced users can [[tap here]] to download and verify their own firmware on a computer.",
  "envoy_fw_ios_instructions_heading": "Allow Envoy to access the microSD card",
...
  "envoy_welcome_screen_subheading": "For a seamless setup, we recommend enabling [[Magic Backups]].\n\nAdvanced users can manually create or restore a wallet seed.",
  "erase_wallet_with_balance_modal_CTA1": "Return to my Accounts",
  "erase_wallet_with_balance_modal_CTA2": "Delete Accounts anyway",
  "erase_wallet_with_balance_modal_subheading": "Before deleting your Envoy Wallet, please empty your Accounts. \nGo to Backups > Erase Wallets and Backups once you’re done.",
  "exploreAddresses_listFilter_unused": "Unused",
...
  "exploreAddresses_searchError_continueSearching": "Continue Searching",
  "exploreAddresses_searchError_notFound": "Address not found in the first {searchSpace} addresses.",
  "exploreAdresses_activityOptions_deleteAccount": "Delete Account",
  "exploreAdresses_activityOptions_editAccountName": "Edit Account Name",
  "exploreAdresses_activityOptions_exploreAddresses": "Explore Addresses",
...
  "learning_center_title_blog": "Blog",
  "learning_center_title_faq": "FAQs",
  "learning_center_title_video": "Videos",
  "learningcenter_status_read": "Read",
  "learningcenter_status_watched": "Watched",
...
  "manage_device_details_menu_disconnectDevice": "Disconnect",
  "manage_device_details_menu_editDevice": "Edit Device Name",
  "manage_device_details_menu_unpairPassport": "Unpair Passport",
  "manage_device_details_unpaired": "Unpaired",
  "manage_device_rename_modal_heading": "Rename your Passport",
  "manualToggleOnSeed_toastHeading_failedText": "Unable to backup. Please try again later.",
...
  "manual_setup_change_from_magic_subheaderApple": "Your Envoy Magic Backup data was successfully deleted from your Apple account and Foundation servers.",
  "manual_setup_change_from_magic_subheaderGoogle": "Your Envoy Magic Backup data was successfully deleted from your Google account and Foundation servers.",
  "manual_setup_create_and_store_backup_CTA": "Choose Destination",
  "manual_setup_create_and_store_backup_heading": "Save Envoy Backup File",
  "manual_setup_create_and_store_backup_modal_CTA": "I understand",
...
  "onboarding_bluetoothDisabled_enable": "Enable in Settings",
  "onboarding_bluetoothDisabled_header": "Enable Bluetooth for QuantumLink Connection",
  "onboarding_bluetoothIntro_connect": "Connect with QuantumLink",
  "onboarding_bluetoothIntro_content": "Passport Prime uses a new, secure Bluetooth-based protocol for real time communication with Envoy.\n\nQuantumLink creates an end-to-end encrypted tunnel between Passport and Envoy, ensuring a secure connection.",
  "onboarding_bluetoothIntro_header": "Secure Bluetooth with\nQuantumLink",
...
  "privacy_node_nodeType_personal": "Personal Node",
  "privacy_node_nodeType_publicServers": "Public servers",
  "privacy_node_title": "Node",
  "privacy_privacyMode_betterPerformance": "Better \nPerformance",
  "privacy_privacyMode_improvedPrivacy": "Improved\nPrivacy",
...
  "settings_currency": "Currency",
