...
                            }
                          }),
                        ),
                      ),
                    if (widget.onPrimaryButtonTap != null)
                      Semantics(
                        identifier: 'PopUp Primary Button',
                        container: true,
                        button: true,
                        excludeSemantics: true,
                        child: EnvoyButton(widget.primaryButtonLabel,
                            type: EnvoyButtonTypes.primary, onTap: () {
                          widget.onPrimaryButtonTap?.call(context);
...
            ),
            if (widget.showCloseButton)
              Positioned(
                top: EnvoySpacing.medium2,
                right: EnvoySpacing.medium2,
                child: Semantics(
                  identifier: 'PopUp Close Button',
                  container: true,
                  button: true,
                  excludeSemantics: true,
                  child: IconButton(
                    padding: EdgeInsets.zero,
                    constraints: const BoxConstraints(),
...
