...
              Positioned(
                top: 0,
                right: 0,
                child: Semantics(
                  container: true,
                  button: true,
                  label: 'close button',
                  child: IconButton(
                    icon: const Icon(Icons.close),
                    onPressed: () => context.go(ROUTE_DEVICES),
                  ),
                ),
              ),
...
