...
        elevation: 0,
        backgroundColor: Colors.black,
        title: const Text("Logs"),
        leading: const CupertinoNavigationBarBackButton(color: Colors.white),
        actions: [
          IconButton(
            tooltip: "Copy logs",
            onPressed: () async {
              try {
                String logs = await EnvoyReport().getLogAsString(24);
                await Clipboard.setData(ClipboardData(text: logs));
                if (context.mounted) {
                  const isMaestroTest = bool.fromEnvironment('IS_MAESTRO_TEST',
...
