...
                    children: [
                      Expanded(
                        child: Container(
                          margin:
                              const EdgeInsets.only(left: EnvoySpacing.small),
                          child: Semantics(
                            identifier: "toast_message",
                            label: widget.message ?? "",
                            child: Text(
                              widget.message ?? "",
                              overflow:
                                  widget.overflow ?? TextOverflow.ellipsis,
                              maxLines: 2,
...
