...
  "envoy_scv_scan_qr_heading": "Next, scan the QR code on Passport's screen",
  "envoy_scv_scan_qr_subheading": "This QR code completes the validation and shares some Passport information with Envoy.",
  "envoy_scv_scan_qr_cta": "Continue",
  "envoy_scv_permissions_os_modal_heading": "“Envoy” Would Like to Access the Camera",
  "envoy_scv_permissions_os_modal_subheading": "Enable camera access to continue setting up your Passport",
  "envoy_scv_permissions_os_modal_refuse": "Don’t Allow",
  "envoy_scv_permissions_os_modal_allow": "Allow",
  "envoy_scv_result_ok_os_clock": "4321",
  "envoy_scv_result_ok_right_action": "Skip",
  "envoy_scv_result_ok_heading": "Your Passport is secure",
  "envoy_scv_result_ok_subheading": "Next, create a PIN to secure your Passport",
  "envoy_scv_result_ok_cta": "Continue",
  "envoy_scv_result_update_card1_subheading": "Update Passport’s Firmware",
...
